# Hades-Violet

./: .gitignore  LICENSE  README.md
Arduino/: CameraWebServer.ino
actuators/: CMakeLists.txt  prj.conf
actuators/boards/: nrf52840dk_nrf52840.overlay
actuators/src/: main.c
base/: CMakeLists.txt  prj.conf
base/board/: nrf52840dk_nrf52840.overlay
base/pi_bt/: ble_scanner.py
base/src/: main.c
dashboard/: docker-compose.yml
dashboard/grafana-data/: grafana.db
dashboard/influx-bridge/: bridge.js  package-lock.json  package.json
dashboard/influxdb-data/: influxd.bolt
dashboard/influxdb-data/engine/data/0be5755bfedf6964/autogen/1/: 000000001-000000001.tsm  fields.idx  fields.idxl
esp32Cam/HalowClient/: HalowClient.ino  SensorConfig.h  SensorGlobal.h  SensorTypes.h
gesture_ai/: ble_advertiser.py  post.py  requirements.txt
gesture_ai/scripts/: collect_data.py  infer_live.py  train_model.py
gesture_ai/utils/: augment_dataset.py  rename_image.py
include/: accelerometer.h  bt_base.h  bt_mobile.h  ult.h  viewer.h
lib/: accelerometer.c  bt_base.c  bt_mobile.c  ult.c  viewer.c
mmwave_radar/: mmwave_reader.py
mobile/: CMakeLists.txt  prj.conf
mobile/board/: thingy52_nrf52832.overlay
mobile/src/: main.c
pi_bt/: ble_advertiser.py  ble_scanner.py
servo/: prj.conf
servo/boards/: disco_l475_iot1.overlay  nrf52840dk_nrf52840.overlay
servo/src/: main.c
ultrasonic/: CMakeLists.txt  prj.conf
ultrasonic/boards/: nrf52840dk_nrf52840.overlay
ultrasonic/src/: main.c
viewer/: CMakeLists.txt  prj.conf
viewer/src/: main.c
(+7 files in other folders)
